creusot/tests/should_fail/prusti/deref/project_new_ref.stderr
error: invalid box dereference of zombie expression
  --> project_new_ref.rs:14:1
   |
14 | #[ensures(result == **(old(x)).0.mk_ref())]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `ensures` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

